# claude-tooling-index

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTALL.sh  README.md  launch-tui.command  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
Plans/: Add_Codex_Support_2026-01-11.md  Maximize_Docstring_And_Unit_Test_Coverage_2026-01-11.md  Structured_Metadata_TUI_Sprint_2026-01-11.md
claude_tooling_index/: __init__.py  analytics.py  cli.py  codex_scanner.py  database.py  models.py  multi_scanner.py  scanner.py  toggles.py
claude_tooling_index/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
claude_tooling_index/scanners/: __init__.py  binaries.py  codex_mcps.py  commands.py  event_queue.py  growth.py  hooks.py  insights.py  mcps.py  plugins.py  sessions.py  skills.py  todos.py  transcripts.py  user_settings.py
claude_tooling_index/tui/: __init__.py  app.py  styles.tcss
claude_tooling_index/tui/widgets/: __init__.py  component_list.py  detail_view.py  search_bar.py
hooks/: CMakeLists.txt  build_hook.sh  post_tool_use_tooling.cpp  post_tool_use_tooling.py
plugin-commands/: tooling-index.md  tooling-scan.md  tooling-stats.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_more_coverage.py  test_codex_mcp_scanner.py  test_codex_scanner.py  test_commands_rich_metadata.py  test_database.py  test_detail_view.py  test_exporters.py  test_mcp_git_remote.py  test_mcps_scanner_more_coverage.py  test_multi_scanner.py  test_plugins_scanner_more_coverage.py  test_scanner_early_return_coverage.py  test_scanners.py  test_scanners_more_coverage.py  test_skill_rich_metadata.py  test_toggles.py  test_tooling_scanner.py  test_tooling_scanner_error_paths.py  test_tui_app.py  test_tui_widgets.py
